[metadata]
name = ssh-server-audit
author = Marek Andrzejczak
author_email = marek_andrzejczak@riseup.net
summary = Performs validation of remote filesystem integrity and executes health checks. Supports self-repair commands
license = LGPLv3
description-file =
    README.md
home-page = https://github.com/Wolnosciowiec/ssh-server-audit
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Software Development :: Version Control
    Topic :: System :: Systems Administration

[files]
packages = sshserveraudit
data_files =
    local/etc/ssh-server-audit/ = ./examples/config.yml

[entry_points]
console_scripts =
    ssh-server-audit = sshserveraudit:run_application
